--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -24,5 +24,11 @@
         android:layout_gravity="center"
         android:text="사진 촬영"/>
 
+    <TextView
+        android:id="@+id/text_textBook"
+        android:layout_width="match_parent"
+        android:layout_height="632dp"
+        android:text="TextView" />
+
 
 </LinearLayout>
