--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -24,13 +24,13 @@
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/text_summary_note"
         android:layout_width="333dp"
         android:layout_height="495dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
-        android:textSize="20dp"
+        android:layout_marginTop="28dp"
         android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
