--- a/app/src/main/res/layout/fragment_my_note.xml
+++ b/app/src/main/res/layout/fragment_my_note.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MyNote.MyNoteFragment">
+    tools:context=".ui.MyNote.MyNoteFragment"
+    android:id="@+id/fragment_my_note">
 
     <TextView
         android:id="@+id/text_my_note"
