--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,27 +8,18 @@
     android:orientation="vertical"
     tools:context=".ui.NoteMaker.NoteMakerFragment">
 
-    <TextView
-        android:id="@+id/text_note_maker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp" />
-
-    <!--    사진 촬영 버튼-->
-    <Button
-        android:id="@+id/btn_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="사진 촬영"/>
-
-    <TextView
-        android:id="@+id/text_textBook"
-        android:layout_width="match_parent"
-        android:layout_height="632dp"
-        android:text="TextView" />
+<!--    <TextureView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/textureView"/>-->
 
 
-</LinearLayout>
+<!--    <ImageView-->
+<!--        android:id="@+id/capture"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginBottom="-45dp"-->
+<!--        app:srcCompat="@drawable/camera_bottom" />-->
+
+</RelativeLayout>
