--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -13,6 +13,11 @@
 <!--        android:layout_height="match_parent"-->
 <!--        android:id="@+id/textureView"/>-->
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="note_fragemnt"
+        android:textSize="30dp"/>
 
 <!--    <ImageView-->
 <!--        android:id="@+id/capture"-->
