서버 연동 성공,에뮬레이터에선 오류 => 권한 관련 문제?

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -50,5 +50,8 @@
         <action
             android:id="@+id/action_cameraFragement_to_navigation_my_note"
             app:destination="@id/navigation_my_note" />
+        <action
+            android:id="@+id/action_cameraFragement_to_newNoteFragment"
+            app:destination="@id/newNoteFragment" />
     </fragment>
 </navigation>
