--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,16 +32,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="85dp"
-        android:backgroundTint="@color/green"
-        android:text="카카오 계정으로 시작하기"
+        android:layout_width="326dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="43dp"
+
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="43dp"
+        android:background="@drawable/btn_round"
+        android:text="     카카오 계정으로 시작하기"
         android:textSize="18dp"
+        app:backgroundTint="@color/green"
+        app:icon="@drawable/ic_kakao_resize"
+        app:iconGravity="textStart"
+        android:textStyle="bold"
+        app:iconTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
