노트 저장 기능 추가

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MyPage.MyPageFragment"
-    android:id="@+id/fragment_my_page">
+    android:id="@+id/fragment_my_page"
+    android:background="@color/white_200">
 
     <TextView
         android:id="@+id/text_my_page"
