--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/new_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_note_background"
+    android:background="@color/white_200"
     android:orientation="vertical"
     tools:context=".ui.NewNoteFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="660dp"
+        android:background="@drawable/img_note_background"
+        android:orientation="vertical"
+        android:id="@+id/note">
 
-    <TextView
-        android:id="@+id/textView"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="20dp"
+            android:text="노트의 제목"
+            android:textSize="35dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_summary_note"
+            android:layout_width="333dp"
+            android:layout_height="495dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="28dp"
+            android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_save_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:textSize="35dp"
-        android:text="노트의 제목"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+        android:layout_gravity="center"
+        android:text="저장하기"
+        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/text_summary_note"
-        android:layout_width="333dp"
-        android:layout_height="495dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="28dp"
-        android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="16dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
