--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#07C97C</color>
     <color name="white_200">#EDEEF0</color>
+    <color name="gray">#43615F5F</color>
 </resources>
