--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">>
 
 <!--    이미지의 둥근 모서리 디자인을 적용시키기 위해 CardView사용-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="210dp"
         android:layout_height="250dp"
-        app:cardCornerRadius="20dp"
+        android:layout_marginStart="20dp"
+        app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
         app:cardBackgroundColor="@android:color/transparent">
 
