--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imgView_note"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/img_note_3"/>
