--- a/app/src/main/res/layout/fragment_my_note.xml
+++ b/app/src/main/res/layout/fragment_my_note.xml
@@ -99,20 +99,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
+
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txt_go_all_quiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="28dp"
             android:layout_marginEnd="20dp"
             android:text="전체 보기"
             android:textColor="@color/gray"
             android:textSize="12dp"
             android:textStyle="bold"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline5" />
-
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline7"
