--- a/app/src/main/res/layout/fragment_my_note.xml
+++ b/app/src/main/res/layout/fragment_my_note.xml
@@ -15,6 +15,17 @@
         android:layout_height="50dp"
         android:background="@color/white_200">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/usr_profile"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="-5dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/img_kakao_user"
+            app:civ_border_overlay="true" />
+
     </LinearLayout>
 
 
