--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -9,38 +9,36 @@
     tools:context="ui.Camera.CameraFragment"
     android:id="@+id/fragment_camera">
 
+
     <TextureView
         android:id="@+id/textureView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"/>
+
 
 
     <ImageView
         android:id="@+id/btn_capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginBottom="40dp"
+        android:layout_above="@+id/camera_bottom"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-38dp"
         app:srcCompat="@drawable/img_camera_button" />
 
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="130dp"-->
-<!--        app:cardBackgroundColor="@android:color/transparent"-->
-<!--        android:layout_centerHorizontal="true">-->
-<!--        -->
-<!--        -->
-<!--    </androidx.cardview.widget.CardView>-->
+
 
     <ImageView
+        android:id="@+id/camera_bottom"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-38dp"
+        android:layout_marginBottom="-16dp"
+        android:scaleType="fitXY"
         app:srcCompat="@drawable/img_camera_bottom" />
-
 
 
 
@@ -48,5 +46,7 @@
         android:id="@+id/imgview_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+
 
 </RelativeLayout>
