--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="gray">#43615F5F</color>
     <color name="black_200">#333333</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#FFFF00</color>
+
 </resources>
