--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -29,7 +29,7 @@
         <TextView
             android:id="@+id/text_summary_note"
             android:layout_width="333dp"
-            android:layout_height="495dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginTop="28dp"
             android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
