--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -17,6 +17,7 @@
         android:id="@+id/note">
 
         <TextView
+            android:fontFamily="@font/yeongdeoksea"
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:fontFamily="@font/yeongdeoksea"
             android:id="@+id/text_summary_note"
             android:layout_width="333dp"
             android:layout_height="wrap_content"
