--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -39,13 +39,36 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_save_note"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="저장하기"
-        android:textStyle="bold"/>
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_return_camera"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"
+            android:text="다시찍기" />
+
+        <Button
+            android:id="@+id/btn_save_note"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="저장하기"
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+
 
 
 </LinearLayout>
