--- a/app/src/main/res/layout/all_note_list_item.xml
+++ b/app/src/main/res/layout/all_note_list_item.xml
@@ -43,7 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginStart="18dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
+            android:fontFamily="@font/pretendard_medium"
             android:text="note 1"
             android:textColor="@color/black"
             android:textSize="18dp"
@@ -57,8 +58,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="19dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="13dp"
+            android:fontFamily="@font/pretendard_extra_light"
             android:text="2023.8.31 am 11:30"
+            android:textColor="@color/mid_grey"
             android:textSize="13dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
