--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -39,13 +39,14 @@
                 android:id="@+id/txt_quiz_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/pretendard_medium"
+                android:letterSpacing="0"
                 android:text="알고리즘의 퀴즈"
                 android:textColor="@color/white"
-                android:textSize="28dp"
+                android:textSize="30dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.087"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,11 +55,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="15dp"
                 android:text="2023.09.16 PM 13:09"
                 android:textColor="@color/white"
                 android:textSize="15dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/pretendard_extra_light"
+                android:letterSpacing="0"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imgView_quiz"
                 app:layout_constraintTop_toBottomOf="@+id/txt_quiz_title"
