--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="black_200">#333333</color>
     <color name="red">#FF0000</color>
     <color name="yellow">#FFFF00</color>
-
+    <color name="sign_green">#07C97C</color>
+    <color name="mid_grey">#AEA9A9</color>
+    <color name="bk">#333333</color>
 </resources>
