--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="yellow">#FFFF00</color>
     <color name="sign_green">#07C97C</color>
     <color name="mid_grey">#AEA9A9</color>
+    <color name="break_line">#D9D9D9</color>
     <color name="bk">#333333</color>
 </resources>
