--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="데이터 베이스의 이해"
-        android:textColor="@color/black"
+        android:textColor="@color/detail_note_page_title"
         android:textStyle="bold"
         android:textSize="40dp"
         android:layout_marginLeft="20dp"
@@ -28,7 +28,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:text="질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어"
-        android:textSize="23dp" />
+        android:textSize="23dp"
+        android:textColor="@color/detail_note_page_content"/>
 
 
 </LinearLayout>
