--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:id="@+id/Logincontainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    >
 
     <TextView
         android:id="@+id/textView2"
@@ -40,6 +41,7 @@
         android:stateListAnimator="@null"
         android:text="     카카오 계정으로 시작하기"
         android:textSize="18dp"
+        android:textColor="@color/white"
         app:backgroundTint="@color/green"
         app:icon="@drawable/ic_kakao_resize"
         app:iconGravity="textStart"
