--- a/app/src/main/res/layout/fragment_note_viewer.xml
+++ b/app/src/main/res/layout/fragment_note_viewer.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="17dp"
             android:layout_marginBottom="12dp"
             android:text="Note 1"
-            android:textColor="@color/black"
+            android:textColor="@color/detail_note_main_title"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
